--- a/src/components/Journal/Journal.module.scss
+++ b/src/components/Journal/Journal.module.scss
@@ -3,3 +3,12 @@
     align-items: center;
     justify-content: space-around;
 }
+
+.tableItemScroll {
+    position: sticky;
+    background: #fff;
+    top: 0;
+    left: 0;
+    min-width: 200px;
+    z-index: 2;
+}
