--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,3 +35,14 @@
     text-decoration: none;
   }
 }
+
+@media (max-width: 720px) {
+  .root {
+    font-size: 14px;
+  }
+  .buttons {
+    span {
+      display: none;
+    }
+  }
+}
