--- a/src/components/Journal/Journal.module.scss
+++ b/src/components/Journal/Journal.module.scss
@@ -17,3 +17,13 @@
     outline: none;
     text-decoration: none;
 } 
+
+@media (max-width: 720px) {
+    .tableItemScroll {
+        font-size: 12px !important;
+        min-width: 170px;
+    }
+    .tableItemScrollItog {
+        font-size: 12px !important;
+    }
+}
