--- a/src/components/TableKTP/TableKTP.module.scss
+++ b/src/components/TableKTP/TableKTP.module.scss
@@ -1,3 +1,13 @@
 .buttonLink {
     margin-bottom: 20px;
 }
+
+.btnPeriodLink {
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.btnPeriod {
+    display: flex;
+    flex-wrap: wrap;
+}
