--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -14,3 +14,12 @@
   font-weight: bold !important;
   margin-bottom: 30px !important;
 }
+
+@media (max-width: 440px) {
+  .root {
+    margin: 0 auto;
+    width: 100%;
+    padding: 50px 10px;
+    margin-top: 50px !important;
+  }
+}
