feat: auth for students

--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -15,6 +15,16 @@
   margin-bottom: 30px !important;
 }
 
+.linkTeachStudentBtn {
+  margin-top: 10px !important;
+}
+
+.linkTeachStudent {
+  outline: none;
+  text-decoration: none;
+  color: #fff;
+}
+
 @media (max-width: 440px) {
   .root {
     margin: 0 auto;
