feat: make PWA corretly and change footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@ body {
   background-color: #F5F5F5 !important;
 }
 
+a {
+  text-decoration: none;
+}
+
 .main__menu {
   display: flex;
   flex-wrap: wrap;
