feat: new styles for menu, change password admin

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,8 +11,9 @@ a {
 }
 
 .main__menu {
-  display: flex;
-  flex-wrap: wrap;
+  display: block ruby;
+  overflow-x: scroll;
+  padding-bottom: 10px;
 }
 
 .predmetList__btn {
