--- a/src/components/Admin/PredmetPage/PredmetPage.module.scss
+++ b/src/components/Admin/PredmetPage/PredmetPage.module.scss
@@ -10,6 +10,8 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 1rem;
   margin-bottom: 20px;
+  height: 300px;
+  overflow-y: scroll;
 }
 
 .btnOk {
