--- a/src/index.scss
+++ b/src/index.scss
@@ -11,9 +11,10 @@ a {
 }
 
 .main__menu {
-  display: block ruby;
+  display: block;
   overflow-x: scroll;
   padding-bottom: 10px;
+  white-space: nowrap;
 }
 
 .predmetList__btn {
